force-app/main/default/objects/leankor__ProjectLaunchBehavior__c/leankor__ProjectLaunchBehavior__c.object-meta.xml
<CustomObject>
    <description>Launch behavior of the project.</description>
    <label>Project Launch Behavior</label>
    <nameField>
        <displayFormat>PLB-{0000000000}</displayFormat>
        <label>Project Launch Behavior</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProjectLaunchBehaviors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>