force-app/main/default/objects/leankor__ProjectLaunchBehavior__c/fields/leankor__DefaultBoard__c.field-meta.xml
<CustomField>
    <fullName>leankor__DefaultBoard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default board type to open.</description>
    <inlineHelpText>Select default board type to open.</inlineHelpText>
    <label>Default Board</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.leankor__Project__c</field>
            <operation>equals</operation>
            <valueField>leankor__ValueStream__c.leankor__ProjectRoom__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>ProjectLaunchBehaviors</relationshipLabel>
    <relationshipName>ProjectLaunchBehaviorValueStreams</relationshipName>
    <type>Lookup</type>
</CustomField>