force-app/main/default/objects/leankor__ProjectLaunchBehavior__c/fields/leankor__Module__c.field-meta.xml
<CustomField>
    <fullName>leankor__Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The module that the set up is related to.</description>
    <inlineHelpText>Select the module to set up.</inlineHelpText>
    <label>Select SetUp</label>
    <referenceTo>leankor__Module__c</referenceTo>
    <relationshipLabel>ProjectLaunchBehaviors</relationshipLabel>
    <relationshipName>ProjectLaunchBehaviorModules</relationshipName>
    <type>Lookup</type>
</CustomField>