force-app/main/default/objects/leankor__ProjectLaunchBehavior__c/fields/leankor__OneClicklaunch__c.field-meta.xml
<CustomField>
    <fullName>leankor__OneClicklaunch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true then launch the module on a single click from the project.</description>
    <inlineHelpText>Indicate if the module is to automatically launch when selecting the project.</inlineHelpText>
    <label>One Click Launch</label>
    <type>Checkbox</type>
</CustomField>