force-app/main/default/objects/leankor__ProjectLaunchBehavior__c/fields/leankor__OpenNewTab__c.field-meta.xml
<CustomField>
    <fullName>leankor__OpenNewTab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true then opens the module a new browser tab.</description>
    <inlineHelpText>Indicate if the module is to open in a new browser tab.</inlineHelpText>
    <label>Open in new tab</label>
    <type>Checkbox</type>
</CustomField>