force-app/main/default/objects/leankor__ProjectLaunchBehavior__c/fields/leankor__Project__c.field-meta.xml
<CustomField>
    <fullName>leankor__Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The project that this record is related to</description>
    <label>Project</label>
    <referenceTo>leankor__ProjectRoom__c</referenceTo>
    <relationshipLabel>ProjectLaunchBehaviors</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>