force-app/main/default/objects/leankor__ProjectLaunchBehavior__c/fields/leankor__ViewType__c.field-meta.xml
<CustomField>
    <fullName>leankor__ViewType__c</fullName>
    <description>The view type of the project board.</description>
    <inlineHelpText>Select the view type of the project board.</inlineHelpText>
    <label>When opening project boards - open</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kanban View</fullName>
                <default>true</default>
                <label>Kanban View</label>
            </value>
            <value>
                <fullName>Calendar View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>